--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,9 @@ serialization-json = "1.7.3"
 serialization = "2.1.0"
 playServicesMlkitFaceDetection = "17.1.0"
 
+#TENSORFLOW
+
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 face-detection-v1701 = { module = "com.google.mlkit:face-detection", version.ref = "faceDetection" }
@@ -58,6 +61,7 @@ face-detection = { group = "com.google.mlkit", name = "face-detection", version.
 #TENSORFLOW
 tensorflow-lite = { group = "org.tensorflow", name = "tensorflow-lite", version.ref = "tensorflow" }
 tensorflow-lite-task-version = { group = "org.tensorflow", name = "tensorflow-lite-task-version", version.ref = "tensorflow-lite" }
+tensorflow-lite-support = { group = "org.tensorflow", name = "tensorflow-lite-support", version = "0.4.0" }
 
 #CAMERAX
 camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "camerax" }
