--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.7.2"
 faceDetection = "17.0.1"
+faceDetectionVersion = "16.1.7"
 firebaseBom = "33.7.0"
 kotlin = "2.0.0"
 coreKtx = "1.10.1"
@@ -20,6 +21,7 @@ firebase = "32.0.0"
 mlkit = "17.0.2"
 
 #TENSORFLOW
+playServicesMlkitImageLabeling = "16.0.8"
 tensorflow = "2.6.0"
 tensorflow-lite = "0.4.2"
 
@@ -43,6 +45,7 @@ playServicesMlkitFaceDetection = "17.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+face-detection-v1617 = { module = "com.google.mlkit:face-detection", version.ref = "faceDetectionVersion" }
 face-detection-v1701 = { module = "com.google.mlkit:face-detection", version.ref = "faceDetection" }
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
 google-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
@@ -62,10 +65,12 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "material-icons-extended" }
 
 # ML KIT
-object-detection = { group = "com.google.mlkit", name = "object-detection", version.ref = "mlkit" }
-face-detection = { group = "com.google.mlkit", name = "face-detection", version.ref = "mlkit" }
+#object-detection = { group = "com.google.mlkit", name = "object-detection", version.ref = "mlkit" }
+#face-detection = { group = "com.google.mlkit", name = "face-detection", version.ref = "mlkit" }
+image-labeling = { group = "com.google.mlkit", name = "image-labeling", version = "17.0.9" }
 
 #TENSORFLOW
+play-services-mlkit-image-labeling = { module = "com.google.android.gms:play-services-mlkit-image-labeling", version.ref = "playServicesMlkitImageLabeling" }
 tensorflow-lite = { group = "org.tensorflow", name = "tensorflow-lite", version.ref = "tensorflow" }
 tensorflow-lite-task-version = { group = "org.tensorflow", name = "tensorflow-lite-task-version", version.ref = "tensorflow-lite" }
 tensorflow-lite-support = { group = "org.tensorflow", name = "tensorflow-lite-support", version = "0.4.0" }
